<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/menu_action1" android:title="@string/action_settings1"/>
    <item android:id="@+id/menu_action2" android:title="@string/action_settings2"/>
    <item android:id="@+id/menu_action3" android:title="@string/action_settings3"/>
    <item android:id="@+id/menu_action4" android:title="@string/action_settings4"/>
    <item android:id="@+id/menu_action5" android:title="@string/action_settings5"/>
    <item android:id="@+id/menu_action6" android:title="@string/action_settings6"/>
</menu>
